--- a/examples/mason.yaml
+++ b/examples/mason.yaml
@@ -8,6 +8,8 @@ bricks:
   # Bricks can also be imported via remote git url.
   # Uncomment the following lines to import the "widget" brick from git.
   deptflu_feat:
-    path: ../bricks/deptflu_feat
+    git:
+      url: https://github.com/rahardien/deptflu.git
+      path: bricks/deptflu_feat
   deptflu_model:
     path: ../bricks/deptflu_model
