--- a/examples/mason.yaml
+++ b/examples/mason.yaml
@@ -12,4 +12,6 @@ bricks:
       url: https://github.com/rahardien/deptflu.git
       path: bricks/deptflu_feat
   deptflu_model:
-    path: ../bricks/deptflu_model
+    git:
+      url: https://github.com/rahardien/deptflu.git
+      path: bricks/deptflu_model
