--- a/bricks/deptflu_model/brick.yaml
+++ b/bricks/deptflu_model/brick.yaml
@@ -8,7 +8,7 @@ repository: https://github.com/rahardien/deptflu
 # The following defines the version and build number for your brick.
 # A version number is three numbers separated by dots, like 1.2.34
 # followed by an optional build number (separated by a +).
-version: 0.1.1
+version: 0.2.1
 
 # The following defines the environment for the current brick.
 # It includes the version of mason that the brick requires.
@@ -36,3 +36,11 @@ vars:
     description: Generate model and entity
     default: Example
     prompt: What model you want to generate?
+  immutable:
+    type: enum
+    description: Immutable package to ensure model/entity's immutability
+    prompt: Choose Immutable package
+    default: equatable
+    values:
+      - equatable
+      - freezed
