--- a/examples/pubspec.yaml
+++ b/examples/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   get_it: ^8.0.0
+  json_annotation:
+  freezed_annotation: ^2.4.4
+  dartz:
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +51,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  freezed: ^2.5.2
+  json_serializable:
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
