--- a/examples/pubspec.yaml
+++ b/examples/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation:
   freezed_annotation: ^2.4.4
   dartz:
+  pull_to_refresh:
 
 dev_dependencies:
   flutter_test:
