--- a/bricks/deptflu_core/brick.yaml
+++ b/bricks/deptflu_core/brick.yaml
@@ -65,3 +65,11 @@ vars:
     values:
       - default
       - go_router
+  validation:
+    type: enum
+    description: Validation package to validate user's input, usually for Form
+    prompt: Choose your preferrable validation package
+    default: none
+    values:
+      - none
+      - formz
