--- a/bricks/deptflu_core/__brick__/{{name.snakeCase()}}/pubspec.yaml
+++ b/bricks/deptflu_core/__brick__/{{name.snakeCase()}}/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   dartz: ^0.10.1 # Add functional programming capability, mostly for handling Error
   get_it: ^8.0.0 # Dependency injection or service locator
   go_router: ^14.3.0 # Routing
-  {{#isUsingBloc}}flutter_bloc: ^8.1.6{{/isUsingBloc}}{{#isUsingBloc}} # State management {{/isUsingBloc}}
-  {{#isUsingFreezed}}freezed_annotation: ^2.4.4{{/isUsingFreezed}}{{#isUsingFreezed}} # Immutable package {{/isUsingFreezed}}
-  {{#isUsingEquatable}}equatable: ^2.0.5{{/isUsingEquatable}}{{#isUsingEquatable}} # Immutable package {{/isUsingEquatable}}
+  {{#using_bloc}}flutter_bloc: ^8.1.6{{/using_bloc}}{{#using_bloc}} # State management {{/using_bloc}}
+  {{#using_freezed}}freezed_annotation: ^2.4.4{{/using_freezed}}{{#using_freezed}} # Immutable package {{/using_freezed}}
+  {{#using_equatable}}equatable: ^2.0.5{{/using_equatable}}{{#using_equatable}} # Immutable package {{/using_equatable}}
 
   # REMOTE
   dio: ^5.7.0 # Supplement for HTTP call
@@ -76,7 +76,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   build_runner: any # Generate code
   flutter_gen_runner: any # Generate assets
-  {{#isUsingFreezed}}freezed: ^2.5.7{{/isUsingFreezed}}{{#isUsingFreezed}} # Generate code for freezed immutability {{/isUsingFreezed}}
+  {{#using_freezed}}freezed: any{{/using_freezed}}{{#using_freezed}} # Generate code for freezed immutability {{/using_freezed}}
   flutter_launcher_icons: ^0.14.1 # Launcher icons
   json_serializable: ^6.8.0 # Generate code to serialize JSON
   retrofit_generator: any # Generate code for Retrofit
