deptflu_bloc: Fixing Bloc Validation

--- a/bricks/deptflu_bloc/brick.yaml
+++ b/bricks/deptflu_bloc/brick.yaml
@@ -8,7 +8,7 @@ description: Brick to generate BLoC/Cubit boilerplate (event & state included) f
 # The following defines the version and build number for your brick.
 # A version number is three numbers separated by dots, like 1.2.34
 # followed by an optional build number (separated by a +).
-version: 0.4.2
+version: 0.4.3
 
 # The following defines the environment for the current brick.
 # It includes the version of mason that the brick requires.
@@ -58,10 +58,7 @@ vars:
     default: false
     prompt: Integrate pagination
   validation:
-    type: enum
+    type: boolean
     description: Validation Cubit to validate user's input, usually for Form
-    prompt: Choose user input validation package
-    default: none
-    values:
-      - none
-      - formz
+    prompt: Create validation Cubit?
+    default: false
