--- a/bricks/deptflu_core/brick.yaml
+++ b/bricks/deptflu_core/brick.yaml
@@ -63,11 +63,7 @@ vars:
     prompt: Choose your preferrable routing package
     values:
       - go_router
-  # validation:
-  #   type: enum
-  #   description: Validation package to validate user's input, usually for Form
-  #   prompt: Choose your preferrable validation package
-  #   default: none
-  #   values:
-  #     - none
-  #     - formz
+  validation:
+    type: boolean
+    description: Validation package to validate user's input, usually for Form
+    prompt: Add formz package to validate user's input?
