--- a/bricks/deptflu_core/__brick__/{{name.snakeCase()}}/mason.yaml
+++ b/bricks/deptflu_core/__brick__/{{name.snakeCase()}}/mason.yaml
@@ -8,17 +8,14 @@ bricks:
   # Bricks can also be imported via remote git url.
   # Uncomment the following lines to import the "widget" brick from git.
   deptflu_bloc:
-    # git:
-    #   url: https://github.com/rahardien/deptflu.git
-    #   path: bricks/deptflu_bloc
-    path: ../../../deptflu_bloc
+    git:
+      url: https://github.com/rahardien/deptflu.git
+      path: bricks/deptflu_bloc
   deptflu_feat:
-    # git:
-    #   url: https://github.com/rahardien/deptflu.git
-    #   path: bricks/deptflu_feat
-    path: ../../../deptflu_feat
+    git:
+      url: https://github.com/rahardien/deptflu.git
+      path: bricks/deptflu_feat
   deptflu_model:
-    # git:
-    #   url: https://github.com/rahardien/deptflu.git
-    #   path: bricks/deptflu_model
-    path: ../../../deptflu_model
+    git:
+      url: https://github.com/rahardien/deptflu.git
+      path: bricks/deptflu_model
